--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           </li>
         </ul>
       </section>
-
+   <!--Our Portfolio-->
       <section>
         <h2>Our Portfolio</h2>
         <ul>
@@ -142,10 +142,7 @@
 
           <li>
             <img
-              src="/images/img5.jpg"
-              width="360"
-              alt="Screen Illustrations"
-            />
+              src="/images/img5.jpg" width="360" alt="Screen Illustrations" />
             <h3>Screen Illustrations</h3>
             <p>Design</p>
           </li>
