--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style.css"/>
     <title>WebStudio</title>
    </head>
 
@@ -118,37 +118,37 @@
         <h2>Our Portfolio</h2>
         <ul>
           <li>
-            <img src="/images/img2.jpg" width="360" alt="Banking app" />
+            <img src="./images/img2.jpg" width="360" alt="Banking app" />
             <h3>Banking App</h3>
             <p>App</p>
           </li>
           <li>
-            <img src="/images/img1.jpg" width="360" alt="payment" />
+            <img src="./images/img1.jpg" width="360" alt="payment" />
             <h3>Cashless Payment</h3>
             <p>Marketing</p>
           </li>
 
           <li>
-            <img src="/images/img3.jpg" width="360" alt="meditation app" />
+            <img src="./images/img3.jpg" width="360" alt="meditation app" />
             <h3>Meditation App</h3>
             <p>App</p>
           </li>
 
           <li>
-            <img src="/images/img4.jpg" width="360" alt="Taxi Service" />
+            <img src="./images/img4.jpg" width="360" alt="Taxi Service" />
             <h3>Taxi Service</h3>
             <p>Marketing</p>
           </li>
 
           <li>
             <img
-              src="/images/img5.jpg" width="360" alt="Screen Illustrations" />
+              src="./images/img5.jpg" width="360" alt="Screen Illustrations" />
             <h3>Screen Illustrations</h3>
             <p>Design</p>
           </li>
 
           <li>
-            <img src="/images/img6.jpg" width="360" alt="Online Courses" />
+            <img src="./images/img6.jpg" width="360" alt="Online Courses" />
             <h3>Online Courses</h3>
             <p>Marketing</p>
           </li>
