--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css"/>
     <title>WebStudio</title>
    </head>
@@ -15,9 +17,9 @@
     <!--header-->
 
     <header class="header">
-      <nav class="nav">
-        <a href="./index.html">WebStudio</a>
-        <ul class="nav__menu">
+      <nav>
+        <a href="./index.html" class="logo-brand">Web<span class="logo-span">Studio</span></a>
+        <ul class="nav-menu">
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
@@ -25,7 +27,7 @@
       </nav>
 
       <address class="address">
-        <ul class="nav__address">
+        <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
@@ -39,7 +41,7 @@
       </section>
 
       <section>
-        <h2>Advantages</h2>
+        <h2 class="title-top">Advantages</h2>
 
         <ul>
           <li>
@@ -77,37 +79,37 @@
       </section>
 
       <!--Our Team-->
-      <section>
-        <h2>Our Team</h2>
+      <section class="team">
+        <h2 class="title">Our Team</h2>
         <ul>
-          <li>
+          <li class="team-card">
             <img src="./images/img.jpg" width="264" alt="Mark Guerrero" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-name">Mark Guerrero</h3>
+            <p class="prof-name">Product Designer</p>
           </li>
 
           <li>
             <img src="./images/img-1.jpg" width="264" alt="Tom Ford" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-name">Tom Ford</h3>
+            <p prof-name>Frontend Developer</p>
           </li>
 
           <li>
             <img src="./images/img-2.jpg" width="264" alt="Camila Garcia" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-name">Camila Garcia</h3>
+            <p prof-name>Marketing</p>
           </li>
 
           <li>
             <img src="./images/img-3.jpg" width="264" alt="Daniel Wilson" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-name">Daniel Wilson</h3>
+            <p prof-name>UI Designer</p>
           </li>
         </ul>
       </section>
    <!--Our Portfolio-->
       <section>
-        <h2>Our Portfolio</h2>
+        <h2 class="title">Our Portfolio</h2>
         <ul>
           <li>
             <img src="./images/img2.jpg" width="360" alt="Banking app" />
@@ -149,9 +151,9 @@
     </main>
 
     <!--footer-->
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a href="./index.html" class="logo-brand">Web<span class="logo-span">Studio</span></a>
+      <p class="txt-footer">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
