--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
     <!--footer-->
     <footer class="footer">
-      <a href="./index.html" class="logo-brand">Web<span class="logo-span">Studio</span></a>
+      <a href="./index.html" class="logo-brand">Web<span class="logo-footer">Studio</span></a>
       <p class="txt-footer">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
