--- a/index.html
+++ b/index.html
@@ -88,19 +88,19 @@
             <p class="prof-name">Product Designer</p>
           </li>
 
-          <li>
+          <li class="team-card">
             <img src="./images/img-1.jpg" width="264" alt="Tom Ford" />
             <h3 class="team-name">Tom Ford</h3>
             <p prof-name>Frontend Developer</p>
           </li>
 
-          <li>
+          <li class="team-card">
             <img src="./images/img-2.jpg" width="264" alt="Camila Garcia" />
             <h3 class="team-name">Camila Garcia</h3>
             <p prof-name>Marketing</p>
           </li>
 
-          <li>
+          <li class="team-card">
             <img src="./images/img-3.jpg" width="264" alt="Daniel Wilson" />
             <h3 class="team-name">Daniel Wilson</h3>
             <p prof-name>UI Designer</p>
