--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <ul>
           <li>
             <h3>Strategy</h3>
-            <p>
+            <p class="title-advantages">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
@@ -54,7 +54,7 @@
 
           <li>
             <h3>Punctuality</h3>
-            <p>
+            <p class="title-advantages">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
@@ -62,7 +62,7 @@
 
           <li>
             <h3>Diligence</h3>
-            <p>
+            <p class="title-advantages">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
@@ -70,7 +70,7 @@
 
           <li>
             <h3>Technologies</h3>
-            <p>
+            <p class="title-advantages">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -113,37 +113,37 @@
         <ul>
           <li>
             <img src="./images/img2.jpg" width="360" alt="Banking app" />
-            <h3>Banking App</h3>
+            <h3 class="team-name">Banking App</h3>
             <p>App</p>
           </li>
           <li>
             <img src="./images/img1.jpg" width="360" alt="payment" />
-            <h3>Cashless Payment</h3>
+            <h3 class="team-name">Cashless Payment</h3>
             <p>Marketing</p>
           </li>
 
           <li>
             <img src="./images/img3.jpg" width="360" alt="meditation app" />
-            <h3>Meditation App</h3>
+            <h3 class="team-name">Meditation App</h3>
             <p>App</p>
           </li>
 
           <li>
             <img src="./images/img4.jpg" width="360" alt="Taxi Service" />
-            <h3>Taxi Service</h3>
+            <h3 class="team-name">Taxi Service</h3>
             <p>Marketing</p>
           </li>
 
           <li>
             <img
               src="./images/img5.jpg" width="360" alt="Screen Illustrations" />
-            <h3>Screen Illustrations</h3>
+            <h3 class="team-name">Screen Illustrations</h3>
             <p>Design</p>
           </li>
 
           <li>
             <img src="./images/img6.jpg" width="360" alt="Online Courses" />
-            <h3>Online Courses</h3>
+            <h3 class="team-name">Online Courses</h3>
             <p>Marketing</p>
           </li>
         </ul>
