--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </section>
 
       <section>
-        <h2 class="title-top">Advantages</h2>
+        <h2 class="title">Advantages</h2>
 
         <ul>
           <li>
