--- a/index.html
+++ b/index.html
@@ -19,29 +19,29 @@
     <header class="header">
       <nav>
         <a href="./index.html" class="logo-brand">Web<span class="logo-span">Studio</span></a>
-        <ul class="nav-menu">
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <ul>
+          <li class="nav-menu"><a href="./index.html">Studio</a></li>
+          <li class="nav-menu"><a href="">Portfolio</a></li>
+          <li class="nav-menu"><a href="">Contacts</a></li>
         </ul>
       </nav>
 
       <address class="address">
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li class="nav-menu"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="nav-menu"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
     <!--main-->
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="top-section">
+        <h1 class="top-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="order-button">Order Service</button>
       </section>
 
       <section>
-        <h2 class="title">Advantages</h2>
+        <h2 class="title-1">Advantages</h2>
 
         <ul>
           <li>
@@ -91,7 +91,7 @@
           <li class="team-card">
             <img src="./images/img-1.jpg" width="264" alt="Tom Ford" />
             <h3 class="team-name">Tom Ford</h3>
-            <p class="pt1-name">Frontend Developer</p>
+            <p class="t1-name">Frontend Developer</p>
           </li>
 
           <li class="team-card">
@@ -114,7 +114,7 @@
           <li>
             <img src="./images/img2.jpg" width="360" alt="Banking app" />
             <h3 class="team-name">Banking App</h3>
-            <p>App</p>
+            <p class="title-portfolio">App</p>
           </li>
           <li>
             <img src="./images/img1.jpg" width="360" alt="payment" />
