--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
       <nav>
         <a href="./index.html" class="logo-brand">Web<span class="logo-span">Studio</span></a>
         <ul>
-          <li class="nav-menu"><a href="./index.html">Studio</a></li>
-          <li class="nav-menu"><a href="">Portfolio</a></li>
-          <li class="nav-menu"><a href="">Contacts</a></li>
+          <li><a href="./index.html" class="nav-menu">Studio</a></li>
+          <li><a href="" class="nav-menu">Portfolio</a></li>
+          <li><a href="" class="nav-menu">Contacts</a></li>
         </ul>
       </nav>
 
       <address class="address">
         <ul>
-          <li class="nav-menu"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="nav-menu"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li><a href="mailto:info@devstudio.com" class="nav-menu">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111" class="nav-menu">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
