--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </li>
 
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="advantages">Punctuality</h3>
             <p class="title-advantages">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
@@ -65,7 +65,7 @@
           </li>
 
           <li>
-            <h3>Diligence</h3>
+            <h3 class="advantages">Diligence</h3>
             <p class="title-advantages">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
@@ -73,7 +73,7 @@
           </li>
 
           <li>
-            <h3>Technologies</h3>
+            <h3 class="advantages">Technologies</h3>
             <p class="title-advantages">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
