--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
       <address class="address">
         <ul>
-          <li><a href="mailto:info@devstudio.com" class="nav-menu">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111" class="nav-menu">+11 (000) 111-11-11</a></li>
+          <li><a href="mailto:info@devstudio.com" class="menu-address">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111" class="menu-address">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
